# fairs-api

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ff3bee55bed_add_fair_and_hall_table.py  2cb6b12db4a3_add_notification_and_stall_tables.py  3efbbf1f204e_add_missing_columns_to_user_table.py  606000c6d277_fix_broken_foreign_keys.py  c5eabcec65dc_add_address_and_company_tables.py  cd11e4501567_add_user_table.py  d2bf76038e96_add_proxy_table_for_fairs_and_companies.py
migrations/versions/: 1ff3bee55bed_add_fair_and_hall_table.py  2cb6b12db4a3_add_stall_table.py  4032ec249f37_add_industry_and_image_tables.py  482fb90bc0de_add_reference_data.py  c5eabcec65dc_add_address_and_company_tables.py  cd11e4501567_add_user_table.py  d2bf76038e96_add_proxy_table_for_fairs_and_companies.py  e5d7326e242a_add_missing_column.py
src/fairs_api/: __init__.py  address_bp.py  auth_bp.py  company_bp.py  config.py  fair_bp.py  hall_bp.py  image_bp.py  locale.json  models.py  proxy_bp.py  seed.py  stall_bp.py  utils.py  validations.py
src/fairs_api/api/: address.py  api.py  company.py  fair.py  hall.py  image.py  stall.py
tests/: conftest.py  test_address_bp.py  test_auth.py  test_company_bp.py  test_fair_bp.py  test_hall_blueprint.py  test_hall_bp.py  test_image_bp.py  test_models.py  test_stall_bp.py
