[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairs_api"
version = "0.0.1"
authors = [
    { name="Åukasz Flisak", email="lu.dev00@gmail.com" }
]
description = "API for fairs management system"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "Flask",
    "Flask-SQLAlchemy",
    "alembic",
    "Flask",
    "pytest",
    "psycopg[binary]"
]

[project.urls]
"Homepage" = "https://github.com/rockenchanter/fairs-api"
